feat(engine): expose current A2A-T business inputs
Signed-off-by: Zhoujie628 <zhoujie628@users.noreply.github.com>